# OOP-labs

./: CMakeLists.txt  main.cpp  six.cpp  six.h  tests.cpp
laboratory-1/: CMakeLists.txt  main.cpp  solve.cpp  solve.h  tests.cpp
laboratory-3/: CMakeLists.txt  array.cpp  array.h  figure.h  main.cpp  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  tests.cpp  trapezoid.cpp  trapezoid.h
laboratory-4/: CMakeLists.txt  array.h  figure.h  main.cpp  point.h  rectangle.h  rhombus.h  tests.cpp  trapezoid.h
laboratory-5/: CMakeLists.txt  MemoryResource.cpp  MemoryResource.h  Stack.cpp  Stack.h  main.cpp  tests.cpp
laboratory-6/: CMakeLists.txt  dragon.cpp  dragon.h  knight.cpp  knight.h  main.cpp  npc.cpp  npc.h  pegas.cpp  pegas.h
laboratory-7/: CMakeLists.txt
laboratory-7/include/: NPC.h  factory.h  observer.h  scene.h  visitor.h
laboratory-7/src/: NPC.cpp  factory.cpp  main.cpp  observer.cpp  scene.cpp  visitor.cpp
